...
      scrolledUnderElevation: 0,
      surfaceTintColor: Colors.transparent,
      shadowColor: Colors.transparent,
      titleSpacing: 8,
      shape: const Border(bottom: BorderSide(color: Colors.black, width: 4)),
      leading: IconButton(
        tooltip: 'Help menu',
        icon: Container(
          padding: const EdgeInsets.all(4),
          decoration: BoxDecoration(
            shape: BoxShape.circle,
            color: context.colours.blue,
            border: Border.all(color: Colors.black, width: 4),
...
