...
      child: Row(
        mainAxisAlignment: MainAxisAlignment.spaceAround,

        children: const [
          _NavItem(
            icon: Icons.dashboard_rounded,
            label: "DASHBOARD",
            isActive: true,
          ),

          _NavItem(icon: Icons.receipt_long_rounded, label: "TRANSACTIONS"),

          _NavItem(
...
